Add option to prevent hiding version tags

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -21,6 +21,8 @@
                         <option value="cxx17">C++17</option>
                         <option value="cxx20">C++20</option>
                     </select>
+                    <br />
+                    <label><input type="checkbox" class="show-versions"> Show version tags</label>
                 </fieldset>
                 <fieldset data-language="c">
                     <legend>C</legend>
@@ -34,6 +36,8 @@
                         <!-- The current most recent GCC version uses C17 as its default, so use that -->
                         <option value="c17">C17</option>
                     </select>
+                    <br />
+                    <label><input type="checkbox" class="show-versions"> Show version tags</label>
                 </fieldset>
             </form>
         </div>
